[gd_scene load_steps=15 format=3 uid="uid://vg733sqgo32g"]

[ext_resource type="Script" uid="uid://dlc7jbdm33dky" path="res://test_assets/fruit_ninja.gd" id="1_7o3lq"]
[ext_resource type="PackedScene" uid="uid://c77y30jtu01js" path="res://test_assets/fruit/strawberry.tscn" id="2_7o3lq"]
[ext_resource type="Script" uid="uid://6u8owblnoenh" path="res://test_assets/slicer.gd" id="2_u7vmo"]
[ext_resource type="PackedScene" uid="uid://bb4v8h54l0j5x" path="res://test_assets/fruit/lemon.tscn" id="3_3mo5p"]
[ext_resource type="PackedScene" uid="uid://cjfn01k8tx2uq" path="res://test_assets/fruit/watermelon.tscn" id="4_mrq5i"]
[ext_resource type="AudioStream" uid="uid://bg2cdw80m5u5" path="res://test_assets/chop.mp3" id="5_mrq5i"]

[sub_resource type="Gradient" id="Gradient_kd16s"]
offsets = PackedFloat32Array(0, 0.935065, 1)
colors = PackedColorArray(1, 0.808011, 0.533734, 1, 0.74026, 0.74026, 0.74026, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u7vmo"]
gradient = SubResource("Gradient_kd16s")
fill_to = Vector2(1, 1)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kd16s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7o3lq"]
size = Vector2(19, 1081)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mo5p"]
size = Vector2(743, 20)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5xtun"]
playback_mode = 1
random_pitch = 1.3
streams_count = 1
stream_0/stream = ExtResource("5_mrq5i")

[sub_resource type="LabelSettings" id="LabelSettings_3mo5p"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mrq5i"]
font_color = Color(0, 0, 0, 1)

[node name="FruitNinja" type="Node2D"]
script = ExtResource("1_7o3lq")
fruit = Array[PackedScene]([ExtResource("2_7o3lq"), ExtResource("3_3mo5p"), ExtResource("4_mrq5i")])

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(300, -50)
scale = Vector2(10.375, 12.4375)
texture = SubResource("GradientTexture2D_u7vmo")
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)

[node name="Slicer" type="Node2D" parent="."]
script = ExtResource("2_u7vmo")

[node name="CutRayLeft" type="RayCast2D" parent="Slicer"]
position = Vector2(263, 370)
target_position = Vector2(500, 0)
collision_mask = 2

[node name="CutRayRight" type="RayCast2D" parent="Slicer"]
position = Vector2(1032, 370)
target_position = Vector2(-500, 0)
collision_mask = 2

[node name="Line2D" type="Line2D" parent="Slicer"]
position = Vector2(301, 369)
points = PackedVector2Array(0, 0, 664, 0)
width = 1.0
texture = SubResource("PlaceholderTexture2D_kd16s")

[node name="PlayArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayArea"]
position = Vector2(294, 385)
shape = SubResource("RectangleShape2D_7o3lq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayArea"]
position = Vector2(974.5, 366.5)
shape = SubResource("RectangleShape2D_7o3lq")

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Spawn" type="Marker2D" parent="."]
position = Vector2(620, 847)

[node name="DespawnArea" type="Area2D" parent="."]
position = Vector2(651, 975)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DespawnArea"]
shape = SubResource("RectangleShape2D_3mo5p")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(641, 374)
stream = SubResource("AudioStreamRandomizer_5xtun")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
position = Vector2(620, 852)
current = true

[node name="DebuggingControls" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 306.0
offset_right = 488.0
offset_bottom = 117.0

[node name="Label" type="Label" parent="DebuggingControls"]
layout_mode = 0
offset_right = 55.0
offset_bottom = 23.0
text = "[E] Stop movement
[S] Stop spawning
[SPACE] Cut"
label_settings = SubResource("LabelSettings_3mo5p")

[node name="Score" type="Label" parent="."]
offset_left = 814.0
offset_top = 4.0
offset_right = 959.0
offset_bottom = 27.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_mrq5i")

[connection signal="body_entered" from="PlayArea" to="." method="_on_fruit_leaving_area"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="body_entered" from="DespawnArea" to="." method="_on_despawn_area_body_entered"]
